I have added all remaining buttons, and they work in most scenarios. You can certainly find a couple of ways to break the calculator, but the clear button sets it all right. The only thing I would do now is make sure to limit the amount of digits allowed, but I don't think its worth the time to do that. I'm calling it done now.

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
     font-weight: initial;
     text-shadow: 1.3px 1.3px #383838;
     margin: 5px;
+    flex-wrap: wrap;
 }
 
 #zero{
